# amber-light-stories

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai/llm/: base.py  router.py  (+2 more)
apis/: analytics.py  gmail.py  google_auth.py  trends.py  youtube.py
app/: config.py  main.py  state.py  supabase_client.py  usage.py
db/: schema.sql
docs/: ARCHITECTURE-FREEZE.md  BACKUP_DR_RUNBOOK.md  MIGRATION-BACKLOG.md  PRODUCT-BIBLE-INDEX.md  PRODUCT-VISION.md  PRODUCTION_DEPLOYMENT.md  branding-audit-2026-07-20.md
media/: render.py
pipeline/: asset_library.py  cost_governor.py  decision.py  dryrun.py  executors.py  fal_adapter.py  local_motion.py  model_routing.py  orchestrator.py  persist.py  prompt_cache.py  render.py  render_dryrun.py  render_worker.py  schema.py  story.py
scripts/: benchmark_visuals.py  cleanup_test_fixtures.py  get_refresh_token.py  seed.py  verify_recovery.py
tests/: conftest.py  test_api.py  test_caption_font.py  test_celery_config.py  test_character_consistency.py  test_config.py  test_content_tasks.py  test_executors.py  test_fal_adapter_seams.py  test_fal_build_prompt.py  test_fal_generate_image.py  test_fal_generate_motion.py  test_fal_image_seed_nsfw.py  test_fal_upload_seam.py  test_gmail.py  test_llm.py  test_media.py  test_orchestrator_budget_gate.py  test_per_character_voices.py  test_pipeline.py  test_pipeline_shortform.py  test_prompts.py  test_render.py  test_render_worker_music.py  test_render_worker_voice.py  test_state.py  test_tts.py  test_youtube.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vercel.json
worker/: beat.py  celery_app.py
(+461 files in other folders)
