[project]
name = "amber-light"
version = "0.1.0"
description = "Amber Light Stories - automated YouTube storytelling channel"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.6",
    "openai>=1.40",
    "google-genai>=1.0",
    "google-api-python-client>=2.140",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "elevenlabs>=1.6",
    "pillow>=10.4",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "fal-client>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ai*", "apis*", "media*", "pipeline*"]
